--- a/index.html
+++ b/index.html
@@ -15,8 +15,56 @@
   <body>
  
 <!--navigation-->
-
+<nav class="navbar navbar-expand-lg navbar-light  fixed-top px-5">
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/logo-header.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link c-white" href="#">Inicio<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link c-white" href="#">Quienes somos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link c-white" href="#">Destacados</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link c-white" href="#">Contacto</a>
+      </li>
+      
+    </ul>
+  </div>
+</nav>
 <!--navigation-->
+
+<!--carousel-->
+<div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/img/slider-1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/slider-2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/slider-3.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<!--end carousel-->
 
 
 
