create section paragraph and cards

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+    <!--icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!--custom styles-->
 <link rel="stylesheet" href="assets/css/styles.css">
     <title>Viajes Chile</title>
@@ -66,6 +69,74 @@
 </div>
 <!--end carousel-->
 
+<!--section paragraph-->
+<div class="container-fluid bg-black section-paragraph">
+  <div class="container">
+    <h2 class="text-center py-5 c-white oswald-medium">¿Quiénes somos?</h2>
+    <div class="divider"></div>
+    <div class="row py-4">
+      <div class="col-lg-4">
+        <article class="icon-bg bg-cyan d-flex justify-content-center align-items-center my-2">
+          <i class="fas fa-plane c-white p-2"></i></article>
+        <p class="c-white">Vivamus quam nisi, ultrices semper tincidunt ac, egestas at turpis. In ornare, est eu efficitur elementum, enim augue interdum lectus, ac vehicula tortor felis a ipsum. Nulla quis ligula congue, dapibus arcu ut, placerat sapien. Quisque et ante eleifend, rhoncus ante et, auctor mauris. Etiam vehicula sem in dui faucibus porta non sed turpis. Phasellus sed elit sed nulla consequat cursus ut vitae ante. Proin euismod libero mauris, ac ullamcorper tortor mattis sit amet. Maecenas id leo nec libero porta scelerisque. </p>
+      </div>
+      <div class="col-lg-4">
+        <p class="c-white">Vivamus quam nisi, ultrices semper tincidunt ac, egestas at turpis. In ornare, est eu efficitur elementum, enim augue interdum lectus, ac vehicula tortor felis a ipsum. Nulla quis ligula congue, dapibus arcu ut, placerat sapien. Quisque et ante eleifend, rhoncus ante et, auctor mauris. Etiam vehicula sem in dui faucibus porta non sed turpis. Phasellus sed elit sed nulla consequat cursus ut vitae ante. Proin euismod libero mauris, ac ullamcorper tortor mattis sit amet. Maecenas id leo nec libero porta scelerisque. </p>
+        <article class="icon-bg bg-cyan p-2 d-flex justify-content-center align-items-center my-2"><i class="fas fa-mountain c-white"></i></article>
+      </div>
+      <div class="col-lg-4">
+        <article class="icon-bg bg-cyan p-2 d-flex justify-content-center align-items-center my-2"><i class="fas fa-route c-white"></i></article>
+        <p class="c-white">Vivamus quam nisi, ultrices semper tincidunt ac, egestas at turpis. In ornare, est eu efficitur elementum, enim augue interdum lectus, ac vehicula tortor felis a ipsum. Nulla quis ligula congue, dapibus arcu ut, placerat sapien. Quisque et ante eleifend, rhoncus ante et, auctor mauris. Etiam vehicula sem in dui faucibus porta non sed turpis. Phasellus sed elit sed nulla consequat cursus ut vitae ante. Proin euismod libero mauris, ac ullamcorper tortor mattis sit amet. Maecenas id leo nec libero porta scelerisque. </p>
+      </div>
+    </div>
+  </div>
+</div>
+<!--end section paragraph-->
+
+
+<!--section cards-->
+<div class="container-fluid bg-black section-paragraph">
+  <div class="container">
+    <h2 class="text-center py-5 c-white oswald-medium">Destacados</h2>
+    <div class="divider"></div>
+    <div class="row py-5 d-flex justify-content-between">
+     
+      <div class="card bg-cyan col p-0" >
+        <img src="assets/img/card-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title c-white oswald-medium text-uppercase">Lorem ipsum dolor sit amet</h5>
+          <p class="card-text c-white lato-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+
+      <div class="card bg-cyan col p-0" >
+        <img src="assets/img/card-2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title c-white oswald-medium text-uppercase">Lorem ipsum dolor sit amet</h5>
+          <p class="card-text c-white lato-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+
+      <div class="card bg-cyan col p-0" >
+        <img src="assets/img/card-3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title c-white oswald-medium text-uppercase">Lorem ipsum dolor sit amet</h5>
+          <p class="card-text c-white lato-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+
+      <div class="card bg-cyan col p-0" >
+        <img src="assets/img/card-4.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title c-white oswald-medium text-uppercase">Lorem ipsum dolor sit amet</h5>
+          <p class="card-text c-white lato-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+</div>
+<!--end section cards-->
 
 
 
